shaku_derive/tests/ui/tuple_struct.stderr
error: Struct properties must be named
  --> $DIR/tuple_struct.rs:10:22
   |
10 | struct ComponentImpl(usize);
   |                      ^^^^^

error: Struct properties must be named
  --> $DIR/tuple_struct.rs:15:21
   |
15 | struct ProviderImpl(usize);
   |                     ^^^^^
